Cambios en vistas y restructuración de código
- Se restructuro la vista de login
- Se restructuro la vista de inspección
- Se agregaron strings
- Se agregaron dimens
- Se agregaron colores

--- a/CORFOGA/app/src/main/res/values/strings.xml
+++ b/CORFOGA/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">CORFOGA</string>
+    <string name="loginButton">Ingresar</string>
+    <string name="saveInspection">Guardar</string>
+    <string name="userName">Nombre de usuario</string>
+    <string name="password">Contraseña</string>
+    <string name="loading">Espere mientras termina la transacción</string>
+
 </resources>
