--- a/CORFOGA/app/src/main/res/values/strings.xml
+++ b/CORFOGA/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="userName">Nombre de usuario</string>
     <string name="password">Contraseña</string>
     <string name="loading">Espere mientras termina la transacción</string>
-
+    <string name="save">Guardar</string>
 </resources>
