Cambio de colores a los animales cuando esté listo
- Se agrego un spinner
- Se agrego la variable StatusID en la clase Inspection y su get y set
- En la clase Global se inicializó
- En la clase InspectionActivity se inicializó el spinner y se agrego if
- Se agrego un for para poder saber el estado y pitar del color correspondiente cada animal, se hizo en la funcion llenar()

--- a/CORFOGA/app/src/main/res/values/strings.xml
+++ b/CORFOGA/app/src/main/res/values/strings.xml
@@ -42,4 +42,10 @@
         <item>3.Estabulación</item>
         <item>4.Suplemento en Potrero</item>
     </string-array>
+
+    <string-array name="estadoAnimal">
+        <item>1.Vivo</item>
+        <item>2.Muerto o Comercializado</item>
+        <item>3.Situación externa</item>
+    </string-array>
 </resources>
